--- a/Personal Projects/Web Development/ServerSideJavascript/public/index.html
+++ b/Personal Projects/Web Development/ServerSideJavascript/public/index.html
@@ -125,7 +125,9 @@
 		//After the button is pressed it will update the geolocation
 		async function getData()
 		{
+			//Variable declarations
 			var videoObject = await checkWebCam();
+			var image64;
 
 			//Assign the items returned by setup
 			const video = videoObject.video;
@@ -146,59 +148,68 @@
 				document.getElementById("Image_not_in").style.opacity = "0"; 
 
 				video.loadPixels();
-				const image64 = video.toDataURL();
-			}
+				image64 = video.canvas.toDataURL();
 
-			//Check if the current location is available
-			if ( 'geolocation' in navigator )
-			{
-				console.log( 'geolocation available' );
-
-				navigator.geolocation.getCurrentPosition( async position => 
+				//Check if the current location is available
+				if ( 'geolocation' in navigator )
 				{
-					//Set latitude and long to the new posistion
-					const lat = position.coords.latitude;
-					const long = position.coords.longitude;
+					console.log( 'geolocation available' );
 
-					//Call function to map user location onto map
-					displayData(lat, long);
+					navigator.geolocation.getCurrentPosition( async position => 
+					{
+						//Set latitude and long to the new posistion
+						const lat = position.coords.latitude;
+						const long = position.coords.longitude;
 
-					//Post data to the server
-					const data = { lat, long, image64 };
+						//Call function to map user location onto map
+						displayData(lat, long);
 
-					//Creates settings for how to post data to server
-					const options = {
-						method:  'POST',
-						headers: {
-	      					'Content-Type': 'application/json'
-	   					},
-						body: JSON.stringify(data)
-					};
+						//Post data to the server
+						const data = { lat, long, image64 };
 
-					//Post the data to the server
-					//Also recieve as data for incoming info from the server
-					const response = await fetch( '/api', options );
+						//Creates settings for how to post data to server
+						const options = {
+							method:  'POST',
+							headers: {
+		      					'Content-Type': 'application/json'
+		   					},
+							body: JSON.stringify(data)
+						};
 
-					const json_data = await response.json();
+						//Post the data to the server
+						//Also recieve as data for incoming info from the server
+						const response = await fetch( '/api', options );
 
-					console.log(json_data);
+						const json_data = await response.json();
 
-				});
-			}
+						console.log(json_data);
 
-			else
-			{
-				console.log( 'geolocation not unavailable' );
+					});
+				}
+
+				else
+				{
+					console.log( 'geolocation not unavailable' );
+				}
 			}
 		}
 
 		//Required for p5Js setup
 		function setup() 
-		{
+		{	
+			var createVideo = true;
+
 			//Create canvas
 			var canvas = createCanvas(windowWidth, windowHeight);
 
-			var video = createCapture(VIDEO);
+			var video;
+			try{
+				video = createCapture(VIDEO);
+			}
+			catch(error){
+				console.log('failed to do the web boi');
+				createVideo = false;
+			}
 
 			//Removes defualt P5 canvas
 			noCanvas();
@@ -208,6 +219,11 @@
 
 			//Load webcam pixels
 			video.loadPixels();
+
+			if( createVideo == true )
+			{
+				video.pixels[0] = -1;
+			}
 
 			return { video, canvas };
 		}
@@ -222,9 +238,11 @@
 			//Load webcam pixels
 			video.loadPixels();
 
+			console.log(video.pixels);
+
 			//If webcam pixels are not greater than zero
 			//There is no webcame device
-			if ( ! ( video.pixels.length > 0 ) )
+			if ( ! ( video.pixels[0] > 0 ) )
 			{
 				//Notify the user their webcam has failed
 				document.getElementById("Webcam_failed_text").style.opacity = "1";
