Added code to pull request from server

--- a/Personal Projects/Web Development/ServerSideJavascript/public/index.html
+++ b/Personal Projects/Web Development/ServerSideJavascript/public/index.html
@@ -21,6 +21,8 @@
 	<p style="color: red;" id="Image_not_in"><b>Please input an image</b></p>
 	<p style="color: red;" id="Webcam_failed_text"><b>Youre webcam has failed to load. Please input an image below</b></p>
 
+	<p>home page | <a href = "all.html">list</a> </p>
+
 	<p>latitude: <span id="latitude"></span>&deg;</p>
 	<p>longitude: <span id="longitude"></span>&deg;</p>
 
