--- a/Personal Projects/Web Development/ServerSideJavascript/public/all.html
+++ b/Personal Projects/Web Development/ServerSideJavascript/public/all.html
@@ -38,6 +38,7 @@
 				const root = document.createElement('div');
 				const geo = document.createElement('div');
 				const date = document.createElement('div');
+				const image = document.createElement('img');
 
 				//Add data to elements on page
 				geo.textContent = `${item.lat}°, ${item.long}°`;
@@ -47,7 +48,7 @@
 				date.textContent = dateString;
 
 				//Convert image from base 64 to actual image
-				image.src = image.image64;
+				image.src = item.image64;
 
 
 				root.append(geo, date, image);
