--- a/Personal Projects/Web Development/ServerSideJavascript/public/index.html
+++ b/Personal Projects/Web Development/ServerSideJavascript/public/index.html
@@ -26,7 +26,7 @@
 	<p>latitude: <span id="latitude"></span>&deg;</p>
 	<p>longitude: <span id="longitude"></span>&deg;</p>
 
-	<input id="button" type="submit" name="button" onclick="getData();" vale="submit" />
+	<input id="button" type="submit" name="button" value="submit" />
 
 	<div id="UserMap" style="height: 500px; width: 500px;"></div>
 
@@ -38,7 +38,8 @@
 	<script>
 		//Variable declarations
 		const imageForm = document.getElementById('ImageForm');
-		const imageInput = document.getElementById('FileInput');
+		const imageInput = document.getElementById('FileInput')
+		const button = document.getElementById('button');
 
 		const UserMap = L.map( 'UserMap' ).setView( [0, 0], 1 );
 
@@ -67,9 +68,6 @@
 
 		//Set form element to opacity 0
 		document.getElementById("ImageForm").style.opacity = "0";  
-
-		//Check if there is a webcam device
-		setInterval(checkWebCam, 1000);
 
 		//Prevent the refresh of page when uploading files
 		//and uploads data to server
@@ -123,81 +121,11 @@
 			document.getElementById( 'longitude' ).textContent = long.toFixed(2);
 		}
 
-		//This function is called whenever the button is pressed.
-		//After the button is pressed it will update the geolocation
-		async function getData()
-		{
-			//Variable declarations
-			var video = await checkWebCam();
-
-
-			//Convert image to base 64 if it has pixels
-			if ( video == null)
-			{
-				//Alert the user an image must be loaded
-				document.getElementById("Image_not_in").style.opacity = "1";  
-
-				return;
-			}
-
-			else
-			{
-				//Remove the alert if it has already been shown
-				document.getElementById("Image_not_in").style.opacity = "0"; 
-
-				video.loadPixels();
-				let image = image.get(0, 0, 100, 100); 
-				const image64 = image.toDataURL();
-
-				console.log(image64);
-
-				//Check if the current location is available
-				if ( 'geolocation' in navigator )
-				{
-					console.log( 'geolocation available' );
-
-					navigator.geolocation.getCurrentPosition( async position => 
-					{
-						//Set latitude and long to the new posistion
-						const lat = position.coords.latitude;
-						const long = position.coords.longitude;
-
-						//Call function to map user location onto map
-						displayData(lat, long);
-
-						//Post data to the server
-						const data = { lat, long, image64 };
-
-						//Creates settings for how to post data to server
-						const options = {
-							method:  'POST',
-							headers: {
-		      					'Content-Type': 'application/json'
-		   					},
-							body: JSON.stringify(data)
-						};
-
-						//Post the data to the server
-						//Also recieve as data for incoming info from the server
-						const response = await fetch( '/api', options );
-
-						const json_data = await response.json();
-
-						console.log(json_data);
-
-					});
-				}
-
-				else
-				{
-					console.log( 'geolocation not unavailable' );
-				}
-			}
-		}
-
 		//Required for p5Js setup
 		function setup() 
 		{	
+			noCanvas();
+
 			var createVideo = true;
 
 			var video;
@@ -220,23 +148,11 @@
 
 			console.log(image64);
 
+
 			if( createVideo == false )
 			{
 				video.pixels[0] = -1;
 			}
-
-			return video;
-		}
-
-		function checkWebCam()
-		{
-			var video = setup();
-
-
-			//Load webcam pixels
-			video.loadPixels();
-
-			console.log(video.pixels[0]);
 
 			//If webcam pixels are not greater than zero
 			//There is no webcame device
@@ -260,6 +176,75 @@
 				//Allow the user to input an image
 				document.getElementById("ImageForm").style.opacity = "0"; 
 			}
+
+			//This function is called whenever the button is pressed.
+			//After the button is pressed it will update the geolocation
+			button.addEventListener('click', async event => 
+			{
+				//Convert image to base 64 if it has pixels
+				if ( video == null)
+				{
+					//Alert the user an image must be loaded
+					document.getElementById("Image_not_in").style.opacity = "1";  
+
+					return;
+				}
+
+				else
+				{
+					//Remove the alert if it has already been shown
+					document.getElementById("Image_not_in").style.opacity = "0"; 
+
+					video.loadPixels();
+
+					const image64 = video.canvas.toDataURL();
+
+					console.log(image64);
+
+					//Check if the current location is available
+					if ( 'geolocation' in navigator )
+					{
+						console.log( 'geolocation available' );
+
+						navigator.geolocation.getCurrentPosition( async position => 
+						{
+							//Set latitude and long to the new posistion
+							const lat = position.coords.latitude;
+							const long = position.coords.longitude;
+
+							//Call function to map user location onto map
+							displayData(lat, long);
+
+							//Post data to the server
+							const data = { lat, long, image64 };
+
+							//Creates settings for how to post data to server
+							const options = {
+								method:  'POST',
+								headers: {
+			      					'Content-Type': 'application/json'
+			   					},
+								body: JSON.stringify(data)
+							};
+
+							//Post the data to the server
+							//Also recieve as data for incoming info from the server
+							const response = await fetch( '/api', options );
+
+							const json_data = await response.json();
+
+							console.log(json_data);
+
+						});
+					}
+
+					else
+					{
+						console.log( 'geolocation not unavailable' );
+					}
+				}
+			});
+
 
 			return video;
 		}
