Added DOM elements to display air quality information. Also added a try catch statement to state no data available if that information is not available. Created 3 functions to change all DOM element opacity:setAllDomOpacity, setDomInvisible, setDomVisible. setAllDomOpacity runs setDomInvisible and setDomVisible by iterating through each dom element that displays chuncks of info and changes the CSS class. I created two new CSS classes as well: visible, invisible. The functions will act on these CSS classes, by setting the DOM elements to those classes. Four functions where also added to change DOM margins: setAllMargin, setDomMarginZero, setDomMarginNegative, setDomMarginNormal. setAllMargin works in a similar way to setAllDomOpacity, except if the client wants to remove marings it will set the last element in the new DOMIDs array to negative. Once the user has pressed the button, and information has been set to the DOM elements, the elements will be made visible with normal margins again.

--- a/Personal Projects/Web Development/ServerSideJavascriptWeather/public/index.html
+++ b/Personal Projects/Web Development/ServerSideJavascriptWeather/public/index.html
@@ -21,17 +21,23 @@
 	<h1>The Weather here</h1>
 	<p>home page | <a href = "/logs/all.html">list</a> </p>
 
-	<p>latitude: <span id="latitude"></span>&deg;</p>
-	<p>longitude: <span id="longitude"></span>&deg;</p>
+	<p id="latitude_info">latitude: <span id="latitude"></span>&deg;</p>
+	<p id="longitude_info">longitude: <span id="longitude"></span>&deg;</p>
 
-	<p>
+	<p id = "weather_info">
 		The weather here is: <span id="summary"></span>
 		<br>
 		With a temperature of: <span id="temperature"></span>°F
+		<br>
+		The concentration of particulate matter: <span id="aq_particulate_matter"></span>
+		<br>
+		The air quality is: <span id="aq_value"></span> <span id="aq_units"></span>
+		<br>
+		The air quality data was last recorded: <span id="aq_date"></span>
 	</p>
 
 
-	<input id="button" type="submit" name="button" value="submit" />
+	<input id="button" type="submit" name="button" value="submit" style="z-index: 5;" />
 
 	<div id="UserMap" style="height: 500px; width: 500px;"></div>
 
