The weather and air quality data is now being sent to the database. Also in sketch.js made data response from server stored in a variable. As a result, changes where made to how the client determines if there is no air quality data. If there is no quality data the reading on air_quality is set to N/A. Also changed the logs page to list all the locations from the database on markers on the map. Added binded popups to display information from all locations to each popup if clicked. Unable to do line breaks in the markers fro some reason.

--- a/Personal Projects/Web Development/ServerSideJavascriptWeather/public/index.html
+++ b/Personal Projects/Web Development/ServerSideJavascriptWeather/public/index.html
@@ -27,7 +27,7 @@
 	<p id = "weather_info">
 		The weather here is: <span id="summary"></span>
 		<br>
-		With a temperature of: <span id="temperature"></span>°F
+		With a temperature of: <span id="temperature"></span>°C
 		<br>
 		The concentration of particulate matter: <span id="aq_particulate_matter"></span>
 		<br>
