--- a/Personal Projects/Web Development/SP500 Website/public/index.html
+++ b/Personal Projects/Web Development/SP500 Website/public/index.html
@@ -6,6 +6,11 @@
 
 	 <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+
+    <!-- Graph script -->
+    <script src="styles/dist/ej2.min.js" type="text/javascript"></script>
+
+    <link href="styles/index.css" rel="stylesheet">
 </head>
 <body>
 	<div class="container-lg">
