--- a/Personal Projects/Web Development/SP500 Website/public/index.html
+++ b/Personal Projects/Web Development/SP500 Website/public/index.html
@@ -2,31 +2,49 @@
 <html>
 <head>
 	<title>S&P 500 Health</title>
+
+	<!-- Page stylesheet -->
 	<link rel= "stylesheet" href = "styles/main.css">
 
-	 <!-- Bootstrap CSS -->
+	<!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
     <!-- Graph script -->
     <script src="styles/dist/ej2.min.js" type="text/javascript"></script>
 
     <link href="styles/index.css" rel="stylesheet">
+
+    <!-- Fonts -->
+ 	<link href="https://fonts.googleapis.com/css2?family=Overpass:wght@200;300;600;800;900&display=swap" rel="stylesheet">
 </head>
 <body>
 	<div class="container-lg">
 		<!-- Header with index name and pirce -->
+		<div class="row displayCase" id="mainHeader">
+			<div class="col-6 col-md-4">
+				<h1><strong>S&P 500: </strong></h1>
+				<hr  id="SP500Underline">
+				<div id="SP500Price"></div>
+			</div>
+		</div>
 
 		<!-- Row with health and and chart -->
-		<div class="row">
+		<div class="row displayCase">
 			<!-- Health indicator -->
 			<div class="col-12 col-md-8">
-				
+				<h3><strong>Health</strong></h3>
+				<div class="RadialGuages" id="SP500Radial"></div>
 			</div>
 
 			<!-- Graph indicator -->
 			<div class="col-6 col-md-4">
-				
+				<div class="LinearGuages" id="SP500LinearShiller"></div>
+				<div class="LinearGuages" id="SP500LinearPE"></div>
+				<div class="LinearGuages" id="SP500LinearPD"></div>
 			</div>
 		</div>
 	</div>
+
+	<!-- Gauge drawing scripts -->
+	<script src="styles/gauges.js" type="text/javascript"></script>
 </body>
