Made CSS changes, and html changes, for alignment of helath and chart elements. Also added code, and some stylization, to strength indicator box

--- a/Personal Projects/Web Development/SP500 Website/public/index.html
+++ b/Personal Projects/Web Development/SP500 Website/public/index.html
@@ -29,7 +29,7 @@
 <body>
 	<div class="container-lg">
 		<!-- Header with index name and pirce -->
-		<div class="row displayCase" id="mainHeader">
+		<div class="row displayCase justify-content-center" id="mainHeader">
 			<div class="col-6 col-md-4">
 				<h1><strong>S&P 500: </strong></h1>
 				<hr  id="SP500Underline">
@@ -38,19 +38,32 @@
 		</div>
 
 		<!-- Row with health and and chart -->
-		<div class="row displayCase">
-			<!-- Health indicator -->
-			<div class="col-12 col-md-8">
-				<h3><strong>Health</strong></h3>
-				<div class="RadialGuages" id="SP500Radial"></div>
+		<div class="row justify-content-center">
+
+			<!-- Health indicators -->
+			<div class="col-xs-8 col-md-5 col-lg-10 row displayCase justify-content-center" style="margin-right: 0.25em;">
+				<!-- Health indicator -->
+				<div class="col-12 col-md-8">
+					<h3><strong>Health</strong></h3>
+					<div class="RadialGuages" id="SP500Radial"></div>
+					<div class="mx-auto" id="StrengthofEquity"></div>
+				</div>
+
+				<!-- Gauge indicator -->
+				<div class="col-6 col-md-4">				
+					<div class="LinearGuages" id="SP500LinearShiller"></div>
+					<div class="LinearGuages" id="SP500LinearPE"></div>
+					<div class="LinearGuages" id="SP500LinearPD"></div>
+				</div>
+			</div>	
+
+			<!-- Equity Price -->
+			<div class="col-xs-4 col-md-3 col-lg-8 displayCase" style="margin-left: 0.25em;">
+				<div class="col">
+					<h4>stuff here</h4>
+				</div>
 			</div>
 
-			<!-- Graph indicator -->
-			<div class="col-6 col-md-4">
-				<div class="LinearGuages" id="SP500LinearShiller"></div>
-				<div class="LinearGuages" id="SP500LinearPE"></div>
-				<div class="LinearGuages" id="SP500LinearPD"></div>
-			</div>
 		</div>
 	</div>
 
