Fixed all bugs with current price returning and did some stylizations

--- a/Personal Projects/Web Development/SP500 Website/public/index.html
+++ b/Personal Projects/Web Development/SP500 Website/public/index.html
@@ -31,9 +31,11 @@
 		<!-- Header with index name and pirce -->
 		<div class="row displayCase justify-content-center" id="mainHeader">
 			<div class="col-6 col-md-4">
-				<h1><strong>S&P 500: </strong></h1>
+				<div class="row">
+					<h1><strong>S&P 500: </strong></h1>
+					<div id="SP500Price"><strong></strong></div>
+				</div>
 				<hr  id="SP500Underline">
-				<div id="SP500Price"></div>
 			</div>
 		</div>
 
