--- a/Personal Projects/Web Development/SP500 Website/public/index.html
+++ b/Personal Projects/Web Development/SP500 Website/public/index.html
@@ -30,12 +30,14 @@
 	<div class="container-lg">
 		<!-- Header with index name and pirce -->
 		<div class="row displayCase justify-content-center" id="mainHeader">
-			<div class="col-6 col-md-4">
-				<div class="row">
+			<div class="col mx-auto">
+				<div class="col-xs-24 col-12 col-md-6 col-lg-6 row mx-auto justify-content-center">
 					<h1><strong>S&P 500: </strong></h1>
-					<div id="SP500Price"><strong></strong></div>
+					<h2 id="SP500Price"></h2>
 				</div>
-				<hr  id="SP500Underline">
+				<div class="col-xs-24 col-12 col-md-6 col-lg-6 mx-auto justify-content-center">
+					<hr  id="SP500Underline">
+				</div>
 			</div>
 		</div>
 
