Fixed feature where border flashes based on movement of index. Also added some new stylization changes

--- a/Personal Projects/Web Development/SP500 Website/public/index.html
+++ b/Personal Projects/Web Development/SP500 Website/public/index.html
@@ -33,7 +33,7 @@
 			<div class="col mx-auto">
 				<div class="col-xs-24 col-12 col-md-6 col-lg-6 row mx-auto justify-content-center">
 					<h1><strong>S&P 500: </strong></h1>
-					<h2 id="SP500Price"></h2>
+					<div id="SP500PriceContainer"><h2 id="SP500Price"></h2></div>
 				</div>
 				<div class="col-xs-24 col-12 col-md-6 col-lg-6 mx-auto justify-content-center">
 					<hr  id="SP500Underline">
