--- a/Personal Projects/Web Development/SP500 Website/public/index.html
+++ b/Personal Projects/Web Development/SP500 Website/public/index.html
@@ -71,7 +71,7 @@
 
 	<!-- Gauge drawing scripts -->
 	<script src="styles/gauges.js" type="text/javascript"></script>
-	<script type="text/typescript" src="styles/graph.ts"></script>
+	<script type="text/javascript" src="styles/graph.js"></script>
 
 	<!-- TypeScript Compilers -->
 	<script type="text/javascript" src="typescript.min.js"></script>
