--- a/Personal Projects/Web Development/SP500 Website/public/index.html
+++ b/Personal Projects/Web Development/SP500 Website/public/index.html
@@ -63,7 +63,7 @@
 
 			<!-- Equity Price -->
 			<div class="col-xs-4 col-md-3 col-lg-8 displayCase" style="margin-left: 0.25em;">
-				<div class="col" id="HistoricalPrices"></div>
+				<div class="col" id="HistoricalPrices" style="margin-left: -1em;"></div>
 			</div>
 
 		</div>
