--- a/Personal Projects/Web Development/SP500 Website/public/index.html
+++ b/Personal Projects/Web Development/SP500 Website/public/index.html
@@ -6,6 +6,7 @@
 	<!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta http-equiv="refresh" content="1800" />
 
 
 
@@ -27,6 +28,8 @@
  	<link href="https://fonts.googleapis.com/css2?family=Overpass:wght@200;300;600;800;900&display=swap" rel="stylesheet">
 </head>
 <body>
+	<div class="parallax"></div>
+
 	<div class="container-lg">
 		<!-- Header with index name and pirce -->
 		<div class="row displayCase justify-content-center" id="mainHeader">
@@ -40,6 +43,8 @@
 				</div>
 			</div>
 		</div>
+
+
 
 		<!-- Row with health and and chart -->
 		<div class="row justify-content-center">
@@ -68,6 +73,10 @@
 
 		</div>
 	</div>
+		<div class="parallax"></div>
+
+
+
 
 	<!-- Gauge drawing scripts -->
 	<script src="styles/gauges.js" type="text/javascript"></script>
