Further fleshing out paralacx background

--- a/Personal Projects/Web Development/SP500 Website/public/index.html
+++ b/Personal Projects/Web Development/SP500 Website/public/index.html
@@ -28,7 +28,7 @@
  	<link href="https://fonts.googleapis.com/css2?family=Overpass:wght@200;300;600;800;900&display=swap" rel="stylesheet">
 </head>
 <body>
-	<div class="parallax"></div>
+	<div class="row parallax justify-content-center"><div class="displayCase" id="mainTitle"><h1>Love Your Money</h1></div></div>
 
 	<div class="container-lg">
 		<!-- Header with index name and pirce -->
