--- a/Personal Projects/Web Development/SP500 Website/public/index.html
+++ b/Personal Projects/Web Development/SP500 Website/public/index.html
@@ -28,7 +28,17 @@
  	<link href="https://fonts.googleapis.com/css2?family=Overpass:wght@200;300;600;800;900&display=swap" rel="stylesheet">
 </head>
 <body>
-	<div class="row parallax justify-content-center"><div class="displayCase" id="mainTitle"><h1>Love Your Money</h1></div></div>
+	<div class="row parallax justify-content-center">
+		<div class="row displayCase justify-content-center" id="mainTitle">
+			<div class="col-sm-6">
+				<h1>Love Your Money</h1>
+			</div>
+			<div class="col-sm-3" style="border: 1px solid grey">
+				<img src="styles/Large-Logo.png">
+			</div>
+		</div>
+
+	</div>
 
 	<div class="container-lg">
 		<!-- Header with index name and pirce -->
