--- a/Personal Projects/Web Development/SP500 Website/public/index.html
+++ b/Personal Projects/Web Development/SP500 Website/public/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
 <head>
 	<title>S&P 500 Health</title>
@@ -33,7 +33,7 @@
 			<div class="col-sm-6">
 				<h1>Love Your Money</h1>
 			</div>
-			<div class="col-sm-3" style="border: 1px solid grey">
+			<div class="col-sm-4" style="border: 1px solid grey">
 				<img src="styles/Large-Logo.png">
 			</div>
 		</div>
