--- a/Personal Projects/Web Development/SP500 Website/public/index.html
+++ b/Personal Projects/Web Development/SP500 Website/public/index.html
@@ -29,6 +29,7 @@
 </head>
 <body>
 	<div class="row parallax justify-content-center">
+		<canvas id="mainGraphic"></canvas>
 		<div class="row displayCase justify-content-center" id="mainTitle">
 			<div class="col-sm-6">
 				<h1>Love Your Money</h1>
@@ -87,6 +88,8 @@
 
 
 
+	<!-- Main Title graphic -->
+	<script src="styles/title-graphic.js" type="text/javascript"></script>
 
 	<!-- Gauge drawing scripts -->
 	<script src="styles/gauges.js" type="text/javascript"></script>
