--- a/Personal Projects/Web Development/SP500 Website/public/index.html
+++ b/Personal Projects/Web Development/SP500 Website/public/index.html
@@ -31,10 +31,10 @@
 	<div class="row parallax justify-content-center">
 		<canvas id="mainGraphic"></canvas>
 		<div class="row displayCase justify-content-center" id="mainTitle">
-			<div class="col-sm-6">
+			<div class="col-sm-8" style="right: 25%; margin-right: 1em;">
 				<h1>Love Your Money</h1>
 			</div>
-			<div class="col-sm-4" style="border: 1px solid grey">
+			<div class="col-sm-2 justify-content-center" id="logo">
 				<img src="styles/Large-Logo.png">
 			</div>
 		</div>
