--- a/Personal Projects/Web Development/SP500 Website/public/index.html
+++ b/Personal Projects/Web Development/SP500 Website/public/index.html
@@ -41,7 +41,7 @@
 
 	</div>
 
-	<div class="container-lg" style="  overflow: auto;">
+	<div class="container-lg" style="overflow: hidden;">
 		<!-- Header with index name and pirce -->
 		<div class="row displayCase justify-content-center" id="mainHeader">
 			<div class="col mx-auto">
@@ -86,12 +86,12 @@
 	</div>
 	<div class="parallax" style="overflow: hidden;">
 		<div class="row justify-content-center" style="height: 100%;" id="mainHeader">
-			<div class="col-6 col-md-4 justify-content-center SecondaryDisplayCase appearance">
+			<div class="col-6 col-md-4 justify-content-center SecondaryDisplayCase untouched">
 				<h2>About</h2>
 				<br>
 				<div>Wow so cool</div>
 			</div>
-			<div class="col-6 col-md-4 justify-content-center SecondaryDisplayCase appearance">
+			<div class="col-6 col-md-4 justify-content-center SecondaryDisplayCase untouched">
 				<h2>How it works</h2>
 				<br>
 				<div>This website grabs the monthly calculated P/E ratio, Shiller P/E ratio, and dividend yield, for the S&P 500. Once we have these numbers we compare them to historical averages, to determine the health of the index on a 100 point scale. The greater difference in negative directions, the weaker the index. The greater the difference in positive directions, the stronger the index.</div>
@@ -103,6 +103,9 @@
 
 	<!-- Main Title graphic -->
 	<script src="styles/title-graphic.js" type="text/javascript"></script>
+
+	<!-- On scroll scripts -->
+	<script src="styles/onScrollLoad.js" type="text/javascript"></script>
 
 	<!-- Gauge drawing scripts -->
 	<script src="styles/gauges.js" type="text/javascript"></script>
