Added about statement

--- a/Personal Projects/Web Development/SP500 Website/public/index.html
+++ b/Personal Projects/Web Development/SP500 Website/public/index.html
@@ -89,7 +89,7 @@
 			<div class="col-6 col-md-4 justify-content-center SecondaryDisplayCase untouched">
 				<h2>About</h2>
 				<br>
-				<div>Wow so cool</div>
+				<div>Love Your Money is dedicated to promoting a conservative financial mindset. By providing information that would allow people to make well informed conservatively financial decisions. This website does this by comparing key ratios of the S&P 500 index to its historical averages.</div>
 			</div>
 			<div class="col-6 col-md-4 justify-content-center SecondaryDisplayCase untouched">
 				<h2>How it works</h2>
