--- a/Personal Projects/Web Development/SP500 Website/public/index.html
+++ b/Personal Projects/Web Development/SP500 Website/public/index.html
@@ -30,7 +30,7 @@
 <body>
 	<div class="row parallax justify-content-center">
 		<canvas id="mainGraphic"></canvas>
-		<div class="row displayCase appearance justify-content-center" id="mainTitle">
+		<div class="row displayCase appearance justify-content-center" id="mainTitle"style="overflow: visible;">
 			<div class="col-sm-8" style="right: 25%; margin-right: 1em;">
 				<h1>Love Your Money</h1>
 			</div>
