--- a/Personal Projects/Web Development/Canvas Mouse Move Animation/index.html
+++ b/Personal Projects/Web Development/Canvas Mouse Move Animation/index.html
@@ -15,6 +15,19 @@
 </head>
 <body>
     <canvas id="canvas1"></canvas>
+    <svg>
+        <defs>
+            <filter id ='goo'>
+                <feGaussianBlur in="SourceGraphic" stdDeviation='10' result='blur'/>
+                <feColorMatrix in='blur' mode='matrix' values='1 0 0 0 0
+                                                               0 1 0 0 0
+                                                               0 0 1 0 0
+                                                               0 0 0 22 -9' />
+
+                <feBlend in='SourceGraphic' in2='goo' />
+            </filter>
+        </defs>
+    </svg>
 
     <script type="text/javascript" src="index.js"></script>
 </body>
