Did some stylizations to about sections to attempt to make text easier to read

--- a/Personal Projects/Web Development/SP500 Website/public/index.html
+++ b/Personal Projects/Web Development/SP500 Website/public/index.html
@@ -85,13 +85,13 @@
 		</div>
 	</div>
 	<div class="parallax" style="overflow: hidden;">
-		<div class="row justify-content-center" style="height: 100%;" id="mainHeader">
-			<div class="col-6 col-md-4 justify-content-center SecondaryDisplayCase untouched">
+		<div class="row justify-content-center" style="height: 80%; margin-top: 5em;" id="mainHeader">
+			<div class="col-6 col-md-4 justify-content-center displayCase SecondaryDisplayCase untouched">
 				<h2>About</h2>
 				<br>
 				<div>Love Your Money is dedicated to promoting a conservative financial mindset. By providing information that would allow people to make well informed conservatively financial decisions. This website does this by comparing key ratios of the S&P 500 index to its historical averages.</div>
 			</div>
-			<div class="col-6 col-md-4 justify-content-center SecondaryDisplayCase untouched">
+			<div class="col-6 col-md-4 justify-content-center displayCase SecondaryDisplayCase untouched">
 				<h2>How it works</h2>
 				<br>
 				<div>This website grabs the monthly calculated P/E ratio, Shiller P/E ratio, and dividend yield, for the S&P 500. Once we have these numbers we compare them to historical averages, to determine the health of the index on a 100 point scale. The greater difference in negative directions, the weaker the index. The greater the difference in positive directions, the stronger the index.</div>
