Added stylizations to mobile page

--- a/Personal Projects/Web Development/SP500 Website/public/index.html
+++ b/Personal Projects/Web Development/SP500 Website/public/index.html
@@ -78,8 +78,8 @@
 			</div>	
 
 			<!-- Equity Price -->
-			<div class="col-xs-4 col-md-3 col-lg-8 displayCase" style="margin-left: 0.25em;">
-				<div class="col" id="HistoricalPrices" style="margin-left: -1em;"></div>
+			<div class="col-xs-4 col-md-3 col-lg-8 displayCase" id="HistoricalPricesContainer">
+				<div class="col" id="HistoricalPrices"></div>
 			</div>
 
 		</div>
